--- a/MOBILE/path_now.html
+++ b/MOBILE/path_now.html
@@ -855,7 +855,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/cart.html">./html/new/cart.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/cart.html">http://devm.hottracks.co.kr/html/new/cart.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -867,7 +867,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/cart_nodata.html">./html/new/cart_nodata.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/cart_nodata.html">http://devm.hottracks.co.kr/html/new/cart_nodata.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -880,7 +880,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderSheet.html">./html/new/orderSheet.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/orderSheet.html">http://devm.hottracks.co.kr/html/new/orderSheet.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -892,7 +892,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderSheet_member.html">./html/new/orderSheet_member.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/orderSheet_member.html">http://devm.hottracks.co.kr/html/new/orderSheet_member.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16">안심번호사용안내, 포인트조회, 예치금 팝업 </td>
         <td class="s4"></td>
@@ -904,7 +904,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderSheet_detail.html">./html/new/orderSheet_detail.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/orderSheet_detail.html">http://devm.hottracks.co.kr/html/new/orderSheet_detail.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -916,7 +916,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/popup_coupon_list.html">./html/new/popup_coupon_list.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/popup_coupon_list.html">http://devm.hottracks.co.kr/html/new/popup_coupon_list.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -929,7 +929,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderComplete.html">./html/new/orderComplete.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/orderComplete.html">http://devm.hottracks.co.kr/html/new/orderComplete.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -941,7 +941,7 @@ th.row-headers-background {
         <td class="s21"></td>
         <td class="s20"></td>
         <td class="s22"></td>
-        <td class="s23" dir="ltr"><a target="_blank" href="./html/new/orderComplete_bank.html">./html/new/orderComplete_bank.html</a></td>
+        <td class="s23" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/orderComplete_bank.html">http://devm.hottracks.co.kr/html/new/orderComplete_bank.html</a></td>
         <td class="s24" dir="ltr">완료</td>
         <td class="s20"></td>
         <td class="s25"></td>
