--- a/PC/css_status_html_new.html
+++ b/PC/css_status_html_new.html
@@ -872,7 +872,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/_new/orderSheet.html">./html/_new/orderSheet.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderSheet.html">./html/new/orderSheet.html</a></td>
         <td class="s19" dir="ltr"></td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -884,7 +884,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/_new/orderSheet_member.html">./html/_new/orderSheet_member.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderSheet_member.html">./html/new/orderSheet_member.html</a></td>
         <td class="s19" dir="ltr"></td>
         <td class="s16"></td>
         <td class="s4"></td>
