--- a/PC/html/new/cart.html
+++ b/PC/html/new/cart.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" type="text/css" href="../../css/biz/slick.css">
 <link rel="stylesheet" type="text/css" href="../../pages/html/css/shop.css">
 <link rel="stylesheet" type="text/css" href="../../pages/html/css/swiper-5.1.0.min.css">
-<link rel="stylesheet" type="text/css" href="../../css/_new/orderandpay.css">
+<link rel="stylesheet" type="text/css" href="../../css/new/orderandpay.css">
 <script type="text/javascript" src="../../js/jquery-1.9.1.min.js"></script>
 <script type="text/javascript" src="../../js/m_contents.js"></script>
 <script type="text/javascript" src="../../js/biz/common_v2.js"></script>
