--- a/PC/html/new/popupCouponList.html
+++ b/PC/html/new/popupCouponList.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" href="../../css/biz/slick.css">
 
     <link rel="stylesheet" type="text/css" href="../../pages/html/css/shop.css">
-    <link rel="stylesheet" type="text/css" href="../../css/_new/orderandpay.css">
+    <link rel="stylesheet" type="text/css" href="../../css/new/orderandpay.css">
 
 
 <script type="text/javascript" src="../../js/jquery-1.9.1.min.js"></script>
