--- a/PC/html/new/search.html
+++ b/PC/html/new/search.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" type="text/css" href="../../css/biz/common_v2.css">
 <link rel="stylesheet" type="text/css" href="../../css/biz/slick.css">
 <!-- 201222 작업부분  -->
-<link rel="stylesheet" type="text/css" href="../../css/_new/search_modi.css">
+<link rel="stylesheet" type="text/css" href="../../css/new/search_modi.css">
 
 <script type="text/javascript" src="../../js/jquery-1.9.1.min.js"></script>
 <script type="text/javascript" src="../../js/m_contents.js"></script>
