--- a/MOBILE/html/new/search_layer.html
+++ b/MOBILE/html/new/search_layer.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" type="text/css" href="../../css/swiper.min.css">
 <link rel="stylesheet" type="text/css" href="../../css/biz/common_v2.css">
 <link rel="stylesheet" type="text/css" href="../../css/biz/hottm_yj.css">
-<link rel="stylesheet" type="text/css" href="../../css/_new/search_modi.css">
+<link rel="stylesheet" type="text/css" href="../../css/new/search_modi.css">
 
 <script type="text/javascript" src="../../js/jquery-1.9.1.min.js"></script>
 <script type="text/javascript" src="../../js/swiper.min.js"></script>
