--- a/PC/path_now.html
+++ b/PC/path_now.html
@@ -842,7 +842,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/_new/cart.html">./html/_new/cart.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/cart.html">http://dev.hottracks.co.kr/html/new/cart.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -854,7 +854,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/_new/cart_nodata.html">./html/_new/cart_nodata.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/cart_nodata.html">http://dev.hottracks.co.kr/html/new/cart_nodata.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -867,7 +867,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/_new/orderSheet.html">./html/_new/orderSheet.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/orderSheet.html">http://dev.hottracks.co.kr/html/new/orderSheet.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -879,7 +879,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/_new/orderSheet_member.html">./html/_new/orderSheet_member.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/orderSheet_member.html">http://dev.hottracks.co.kr/html/new/orderSheet_member.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"> 예치금, 안심번호 안내, 쿠폰변경 팝업</td>
         <td class="s4"></td>
@@ -891,7 +891,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/_new/popupCouponList.html">./html/_new/popupCouponList.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/popupCouponList.html">http://dev.hottracks.co.kr/html/new/popupCouponList.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -904,7 +904,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/_new/orderComplete.html">./html/_new/orderComplete.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/orderComplete.html">http://dev.hottracks.co.kr/html/new/orderComplete.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -916,7 +916,7 @@ th.row-headers-background {
         <td class="s21"></td>
         <td class="s20"></td>
         <td class="s22"></td>
-        <td class="s23" dir="ltr"><a target="_blank" href="./html/_new/orderComplete_bank.html">./html/_new/orderComplete_bank.html</a></td>
+        <td class="s23" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/orderComplete_bank.html">http://dev.hottracks.co.kr/html/new/orderComplete_bank.html</a></td>
         <td class="s24" dir="ltr">완료</td>
         <td class="s20"></td>
         <td class="s25"></td>
