--- a/MOBILE/html/new/orderSheet.html
+++ b/MOBILE/html/new/orderSheet.html
@@ -173,19 +173,21 @@
                             <tr>
                                 <th>이메일<span class="star">*</span></th>
                                 <td>
-                                    <div class="choice_wrap type_squre have_inner_txt inner_float_dot">                                                  
-                                        <span class="input_wrap">
-                                            <input type="text" placeholder="" class="width_email">
-                                        </span>
-                                        <span class="input_wrap inner_dot">@</span>
-                                        <span class="input_wrap">
-                                            <input type="text" placeholder="" class="width_email">
-                                        </span> 
-                                        <span class="input_wrap">
+                                    <div class="choice_wrap type_squre  inner_float_dot">
+                                        <div class="have_inner_txt">
+                                            <span class="input_wrap">
+                                                <input type="text" placeholder="" class="width_email">
+                                            </span>
+                                            <span class="input_wrap inner_dot">@</span>
+                                            <span class="input_wrap right">
+                                                <input type="text" placeholder="" class="width_email">
+                                            </span>
+                                        </div>
+                                        <div class="select_wrap">
                                             <select name="" id="" class="width_email">
                                                 <option value="">직접입력</option>
                                             </select>
-                                        </span>                                              
+                                        </div>                                              
                                     </div>
                                 </td>                                    
                             </tr>
@@ -707,7 +709,7 @@
                             <!-- 카카오 Pay -->
                             <div class="tab_layer">
                                 <div class="tab_layer_text_box">
-                                    <p class="layer_title">휴대폰 결제 안내</p>
+                                    <p class="layer_title">카카오페이 안내</p>
                                     <ul class="layer_txt_list">
                                         <li>카카오페이는 개인 신용카드를 카카오톡 앱에 등록/인증하여 결제하는 방식입니다.</li>
                                         <li>최초 1회 결제 정보만 입력하여 간편하게 결제하실 수 있는 모바일 결제 서비스입니다.</li>
