--- a/PC/html/new/cart_nodata.html
+++ b/PC/html/new/cart_nodata.html
@@ -153,8 +153,8 @@ $(document).ready(function(){
 <div class="mgt20 c_both">
     <ul class="list_type02_v2 fs14">
         <li>로그인 시 장바구니는 <strong class="normal">14일</strong> 동안 보관됩니다.
-        <li>더 오래 보관하고 싶은 상품은 <strong class="">♡ </strong>버튼을 눌러주세요.</li>
-        <li><strong class="">♡ </strong>상품은 '마이핫트랙스'에서 확인 가능합니다.</li>
+        <li>더 오래 보관하고 싶은 상품은 좋아요 버튼을 눌러주세요.</li>
+        <li>좋아요 상품은 '마이핫트랙스'에서 확인 가능합니다.</li>
         <li>쿠폰 적용 제외 상품은 쿠폰 적용이 되지 않습니다.</li>
     </ul>
 </div>
