--- a/PC/html/new/orderSheet_member.html
+++ b/PC/html/new/orderSheet_member.html
@@ -462,7 +462,7 @@
                                 </thead>
                                 <tbody>
                                 <tr>
-                                    <td>
+                                    <td class="t_left">
                                         2310040795247
                                     </td>
                                     <td>
@@ -541,7 +541,7 @@
                                     </tfoot>
                                     <tbody>
                                     <tr>
-                                        <td>
+                                        <td class="t_left">
                                             2310040795247
                                         </td>
                                         <td>
@@ -569,7 +569,7 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>
+                                        <td class="t_left">
                                             8809440339266
                                         </td>
                                         <td>
@@ -594,7 +594,7 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>
+                                        <td class="t_left">
                                             2310003345595
                                         </td>
                                         <td>
@@ -675,7 +675,7 @@
                                     </tfoot>
                                     <tbody>
                                     <tr>
-                                        <td>
+                                        <td class="t_left">
                                             2310040307839
                                         </td>
                                         <td>
@@ -753,7 +753,7 @@
                                     </tfoot>
                                     <tbody>
                                     <tr>
-                                        <td>
+                                        <td class="t_left">
                                             2310040093039
                                         </td>
                                         <td>
@@ -865,7 +865,7 @@
                                     </tfoot>
                                     <tbody>
                                     <tr>
-                                        <td>
+                                        <td class="t_left">
                                             8807333795496
                                         </td>
                                         <td>
@@ -1476,7 +1476,7 @@
                                     <!-- 카카오 Pay -->
                                     <div class="tab_layer">
                                         <div class="tab_layer_text_box">
-                                            <p class="layer_title">휴대폰 결제 안내</p>
+                                            <p class="layer_title">카카오페이 안내</p>
                                             <ul class="layer_txt_list">
                                                 <li>카카오페이는 개인 신용카드를 카카오톡 앱에 등록/인증하여 결제하는 방식입니다.</li>
                                                 <li>최초 1회 결제 정보만 입력하여 간편하게 결제하실 수 있는 모바일 결제 서비스입니다.</li>
