--- a/PC/path_now.html
+++ b/PC/path_now.html
@@ -821,15 +821,15 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;"></div></th>
         <td class="s14"></td>
-        <td class="s15" dir="ltr">검색결과</td>
-        <td class="s16"></td>
+        <td class="s15" dir="ltr">검색</td>
+        <td class="s16">검색결과</td>
         <td class="s16"></td>
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/search.html">http://dev.hottracks.co.kr/html/new/search.html</a></td>
         <td class="s19" dir="ltr">완료</td>
-        <td class="s16"></td>
+        <td class="s16">인기검색어 슬라이드, 결과팝업</td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
