--- a/MOBILE/html/new/orderSheet.html
+++ b/MOBILE/html/new/orderSheet.html
@@ -289,7 +289,7 @@
                                 </td>                                    
                             </tr>
                              <tr>
-                                <th colspan="2" class="padding_set_top">주문 요청사항 <span class="star">*</span></th>
+                                <th colspan="2" class="padding_set_top">주문 요청사항</th>
                             </tr>
                             <tr>
                                 <td colspan="2">
@@ -299,7 +299,7 @@
                                 </td>                                    
                             </tr>
                              <tr>
-                                <th colspan="2" class="padding_set_top">배송 요청사항 <span class="star">*</span></th>
+                                <th colspan="2" class="padding_set_top">배송 요청사항</th>
                             </tr>
                             <tr>
                                 <td colspan="2">
@@ -409,7 +409,7 @@
                     </div>
                     <div class="user_price_unit sum">
                         <p class="unit_sum_tit">총 결제금액</p>
-                        <p class="unit_sum"><span class="only_english point02">699,000</span><span>원</span></p>
+                        <p class="unit_sum"><span class="only_english point02">699,000</span><span class="s_txt">원</span></p>
                     </div>
                     <div class="user_price_unit">
                         <p class="unit_sum_point"><span class="color">통합포인트 적립 예정</span> <span>100원</span></p>
