--- a/PC/html/new/orderSheet_member.html
+++ b/PC/html/new/orderSheet_member.html
@@ -393,7 +393,7 @@
                                         </td>                                    
                                     </tr>
                                      <tr>
-                                        <th>주문 요청사항 <span class="star">*</span></th>
+                                        <th>주문 요청사항</th>
                                         <td>
                                             <div class="input_wrap">
                                                 <input type="text" placeholder="주문 상품 업체에 전달되는 메시지입니다. 요청사항을 입력해주세요." class="width_check">
@@ -401,7 +401,7 @@
                                         </td>                                    
                                     </tr>
                                      <tr>
-                                        <th>배송 요청사항 <span class="star">*</span></th>
+                                        <th>배송 요청사항</th>
                                         <td>
                                             <div class="select_wrap delivery_order">
                                                 <select name="" id="" class="width_check">
