--- a/PC/html/_modi/@@template.html
+++ b/PC/html/_modi/@@template.html
@@ -49,15 +49,16 @@
             <!-- gnb -->
             <nav id="gnb">
                 <div class="header_wrap">
-                    <h1 class="g_logo"><a href="#n">HOTTRACKS</a></h1>
+                    <h1 class="g_logo"><a href="#n">HOTTRACKS</a
+                        ></h1>
                     <div class="g_search">
                         <form name="gnbSearchForm" action="/ht/biz/bizSearchMain" method="post" onsubmit="return false;">
-                            <div class="form_select">
+                            <!-- <div class="form_select">
                                 <select id="gnbSearchMenu" name="gnbSearchMenu">
                                     <option value='GIFT'>문구/기프트</option>
                                     <option value='RECORD'>음반</option>
                                 </select>
-                            </div>
+                            </div> -->
                             <div class="form_search">
                                 <input type="text" placeholder="샤오미를 쓰는 이유" name="searchTerm" value="">
                                 <a href="#" class="btn_search" __onclick="gnbSrchFrm();return false;"></a>
@@ -128,10 +129,6 @@
         <div id="container">
             <!-- 컨텐츠 -->
             <div class="content">
-
-                <div>
-                    <label for=""><input type="checkbox"></label>
-                </div>
 
                 
 
