--- a/PC/path.html
+++ b/PC/path.html
@@ -1383,7 +1383,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s16"><a href="http://dev.hottracks.co.kr/ht/help/helpMain">http://dev.hottracks.co.kr/ht/help/helpMain</a></td>
         <td class="s17" dir="ltr">대기</td>
-        <td class="s16"><a href="html/_modi/menu0.html" target="_blank">a</a></td>
+        <td class="s16"><a href="html/new/menu0.html" target="_blank">a</a></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -1396,7 +1396,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s16" dir="ltr"><a href="http://dev.hottracks.co.kr/ht/help/sosCounselMain">http://dev.hottracks.co.kr/ht/help/sosCounselMain</a></td>
         <td class="s17" dir="ltr">대기</td>
-        <td class="s16"> <a href="html/_modi/menu1_1.html" target="_blank">a</a></td>
+        <td class="s16"> <a href="html/new/menu1_1.html" target="_blank">a</a></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -1422,7 +1422,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s16"></td>
         <td class="s17" dir="ltr">대기</td>
-        <td class="s16"><a href="html/_modi/menu2_1.html" target="_blank">a</a></td>
+        <td class="s16"><a href="html/new/menu2_1.html" target="_blank">a</a></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -1435,7 +1435,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s16"></td>
         <td class="s17" dir="ltr">대기</td>
-        <td class="s16"><a href="html/_modi/menu2_2.html" target="_blank">a</a></td>
+        <td class="s16"><a href="html/new/menu2_2.html" target="_blank">a</a></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -1448,7 +1448,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s16"></td>
         <td class="s17" dir="ltr">대기</td>
-        <td class="s16"><a href="html/_modi/menu2_3.html" target="_blank">a</a></td>
+        <td class="s16"><a href="html/new/menu2_3.html" target="_blank">a</a></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -1461,7 +1461,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s16"></td>
         <td class="s17" dir="ltr">대기</td>
-        <td class="s16"><a href="html/_modi/menu2_4.html" target="_blank">a</a></td>
+        <td class="s16"><a href="html/new/menu2_4.html" target="_blank">a</a></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -1474,7 +1474,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s16"></td>
         <td class="s17" dir="ltr">대기</td>
-        <td class="s16"><a href="html/_modi/menu3_1.html" target="_blank">a</a></td>
+        <td class="s16"><a href="html/new/menu3_1.html" target="_blank">a</a></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -1487,7 +1487,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s16"></td>
         <td class="s17" dir="ltr">대기</td>
-        <td class="s16"><a href="html/_modi/menu3_2.html" target="_blank">a</a></td>
+        <td class="s16"><a href="html/new/menu3_2.html" target="_blank">a</a></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -1500,7 +1500,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s16"></td>
         <td class="s17" dir="ltr">대기</td>
-        <td class="s16"><a href="html/_modi/menu3_3.html" target="_blank">a</a></td>
+        <td class="s16"><a href="html/new/menu3_3.html" target="_blank">a</a></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -1513,7 +1513,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s16"></td>
         <td class="s17" dir="ltr">대기</td>
-        <td class="s16"><a href="html/_modi/menu3_4.html" target="_blank">a</a></td>
+        <td class="s16"><a href="html/new/menu3_4.html" target="_blank">a</a></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -1526,7 +1526,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s16"></td>
         <td class="s17" dir="ltr">대기</td>
-        <td class="s16"><a href="html/_modi/menu3_5.html" target="_blank">a</a></td>
+        <td class="s16"><a href="html/new/menu3_5.html" target="_blank">a</a></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -1539,7 +1539,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s16"></td>
         <td class="s17" dir="ltr">대기</td>
-        <td class="s16"><a href="html/_modi/menu4_1.html" target="_blank">a</a></td>
+        <td class="s16"><a href="html/new/menu4_1.html" target="_blank">a</a></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -1552,7 +1552,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s16"></td>
         <td class="s17" dir="ltr">대기</td>
-        <td class="s16"><a href="html/_modi/menu4_2.html" target="_blank">a</a></td>
+        <td class="s16"><a href="html/new/menu4_2.html" target="_blank">a</a></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -1565,7 +1565,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s16"></td>
         <td class="s17" dir="ltr">대기</td>
-        <td class="s16"><a href="html/_modi/menu4_3.html" target="_blank">a</a></td>
+        <td class="s16"><a href="html/new/menu4_3.html" target="_blank">a</a></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -1578,7 +1578,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s16"></td>
         <td class="s17" dir="ltr">대기</td>
-        <td class="s16"><a href="html/_modi/menu4_4.html" target="_blank">a</a></td>
+        <td class="s16"><a href="html/new/menu4_4.html" target="_blank">a</a></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -1591,7 +1591,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s16"></td>
         <td class="s17" dir="ltr">대기</td>
-        <td class="s16"><a href="html/_modi/menu5_1.html" target="_blank">a</a></td>
+        <td class="s16"><a href="html/new/menu5_1.html" target="_blank">a</a></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -1604,7 +1604,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s16"></td>
         <td class="s17" dir="ltr">대기</td>
-        <td class="s16"><a href="html/_modi/menu5_2.html" target="_blank">a</a></td>
+        <td class="s16"><a href="html/new/menu5_2.html" target="_blank">a</a></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -1617,7 +1617,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s16"></td>
         <td class="s17" dir="ltr">대기</td>
-        <td class="s16"><a href="html/_modi/menu5_3.html" target="_blank">a</a></td>
+        <td class="s16"><a href="html/new/menu5_3.html" target="_blank">a</a></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -1630,7 +1630,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s16"></td>
         <td class="s17" dir="ltr">대기</td>
-        <td class="s16"><a href="html/_modi/menu5_4.html" target="_blank">a</a></td>
+        <td class="s16"><a href="html/new/menu5_4.html" target="_blank">a</a></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -1643,7 +1643,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s16"></td>
         <td class="s17" dir="ltr">대기</td>
-        <td class="s16"><a href="html/_modi/menu6_1.html" target="_blank">a</a></td>
+        <td class="s16"><a href="html/new/menu6_1.html" target="_blank">a</a></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -1656,7 +1656,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s16"></td>
         <td class="s17" dir="ltr">대기</td>
-        <td class="s16"><a href="html/_modi/menu6_2.html" target="_blank">a</a></td>
+        <td class="s16"><a href="html/new/menu6_2.html" target="_blank">a</a></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -1669,7 +1669,7 @@ th.row-headers-background {
         <td class="s22"></td>
         <td class="s20"></td>
         <td class="s22" dir="ltr">대기</td>
-        <td class="s20"><a href="html/_modi/menu6_3.html" target="_blank">a</a></td>
+        <td class="s20"><a href="html/new/menu6_3.html" target="_blank">a</a></td>
         <td class="s4"></td>
       </tr>
     </tbody>
