--- a/PC/html/_modi/menu6_1.html
+++ b/PC/html/_modi/menu6_1.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" type="text/css" href="../../css/biz/common_v2.css">
     <link rel="stylesheet" type="text/css" href="../../css/biz/hottweb_yj.css">
     <link rel="stylesheet" type="text/css" href="../../css/biz/slick.css">
-    <link rel="stylesheet" type="text/css" href="../../css/_modi/cs_last.css">
+    <link rel="stylesheet" type="text/css" href="../../css/new/cs_last.css">
 
     <script type="text/javascript" src="../../js/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="../../js/m_contents.js"></script>
