--- a/PC/html/new/menu1_1.html
+++ b/PC/html/new/menu1_1.html
@@ -37,6 +37,8 @@
     <link rel="stylesheet" type="text/css" href="../../css/biz/common_v2.css">
     <link rel="stylesheet" type="text/css" href="../../css/biz/hottweb_yj.css">
     <link rel="stylesheet" type="text/css" href="../../css/biz/slick.css">
+
+    <!-- 20.12.28 -->
     <link rel="stylesheet" type="text/css" href="../../css/new/cs_last.css">
 
     <script type="text/javascript" src="../../js/jquery-1.9.1.min.js"></script>
@@ -808,15 +810,17 @@
 
 
 
-        <!-- Container -->
-        <div id="container">
-            <!-- 컨텐츠 -->
+    <!-- 201228 S : id="content 에 class="cs_last" 넣어주세요 -->
+    <!-- Container -->
+        <div id="container" >   
+            <!-- 컨텐츠 -->        
             <div class="content cs_last" id="content">
 
                 <!-- sub top -->
-               <div class="page_location">
-                    <h2 class="title only_english">CS Center</h2>
-                    <div class="loc"><a href="/" class="home">Home</a><em>SOS상담</em></div>
+                <div class="page_location">
+                    <h2 class="title">
+                        <a href="javascript:;">CS Center</a>
+                    </h2>
                 </div>
                 <!-- //sub top -->
 
