--- a/PC/html/new/menu2_3_new.html
+++ b/PC/html/new/menu2_3_new.html
@@ -835,7 +835,7 @@ if (isEmpty(vid)) {//로그인이 안되있으면
             
             <!-- sub top -->
             <div class="page_location">
-                <h2 class="title"><a href="javascript:;">CS Center</a></h2>
+                <h2 class="title"><a href="javascript:;">고객센터</a></h2>
             </div>
             <!-- //sub top -->
 
