--- a/PC/html/new/menu1_1.html
+++ b/PC/html/new/menu1_1.html
@@ -819,7 +819,7 @@
                 <!-- sub top -->
                 <div class="page_location">
                     <h2 class="title">
-                        <a href="javascript:;">CS Center</a>
+                        <a href="javascript:;">고객센터</a>
                     </h2>
                 </div>
                 <!-- //sub top -->
