--- a/PC/html/new/menu2_3.html
+++ b/PC/html/new/menu2_3.html
@@ -833,12 +833,13 @@ if (isEmpty(vid)) {//로그인이 안되있으면
             <!-- 컨텐츠 -->        
         <div class="content cs_last" id="content">
             
-<!-- sub top -->
-<div class="page_location">
-    <h2 class="title">CS Center</h2>
-    <div class="loc"><a href="/" class="home">Home</a><em>상품입점문의</em></div>
-</div>
-<!-- //sub top -->
+            <!-- sub top -->
+            <div class="page_location">
+                <h2 class="title">
+                    <a href="javascript:;">고객센터</a>
+                </h2>
+            </div>
+            <!-- //sub top -->
 
 
 
